# bible-scrapper

./: README.md  pyproject.toml
app/: main.py  run.py
app/constants/: book_constanst.py
app/output/: 1 Chronicles.json  1 Corinthians.json  1 John.json  1 Kings.json  1 Peter.json  1 Samuel.json  1 Thessalonians.json  1 Timothy.json  2 Chronicles.json  2 Corinthians.json  2 John.json  2 Kings.json  2 Peter.json  2 Samuel.json  2 Thessalonians.json  2 Timothy.json  3 John.json  Acts.json  Amos.json  Colossians.json  Daniel.json  Deuteronomy.json  Ecclesiastes.json  Ephesians.json  Esther.json  Exodus.json  Ezekiel.json  Ezra.json  Galatians.json  Genesis.json  Habakkuk.json  Haggai.json  Hebrews.json  Hosea.json  Isaiah.json  James.json  Jeremiah.json  Job.json  Joel.json  John.json  (+26 more)
controllers/: scrape_controller.py
