[project]
name = "py-scraper"
version = "0.1.0"
description = "FastAPI with Playwright integration"
requires-python = ">=3.8"
dependencies = [
    "fastapi[standard]",
    "playwright",
    "uvicorn[standard]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]